<resources>
    <string name="app_name">NewYorkTime</string>
    <string name="story_section_home">home</string>
    <string name="story_section_arts">arts</string>
    <string name="story_section_automobiles">automobiles</string>
    <string name="story_section_books">books</string>
    <string name="story_section_business">business</string>
    <string name="story_section_fashion">fashion</string>
    <string name="story_section_food">food</string>
    <string name="story_section_health">health</string>
    <string name="story_section_movies">movies</string>
    <string name="story_section_sports">sports</string>
    <string name="story_section_technology">technology</string>
    <string name="story_section_travel">travel</string>
    <string name="story_section_world">world</string>
    <string name="story_section_magazine">magazine</string>
    <string name="story_section_science">science</string>
    <string name="notice_hour_title">h ago</string>
    <string name="notice_min_title">m ago</string>
    <string name="notice_now_title">just now</string>
    <string name="title_news">News</string>
    <string name="title_top_stories">Top stories</string>
    <string name="title_most_popular">Most popular</string>
    <string name="action_open_drawer">Open drawer</string>
    <string name="action_close_drawer">Close drawer</string>
    <string name="title_search">Search here</string>
    <string name="title_movie">Movie</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_top_rate">Top rate</string>
    <string name="title_other">Other</string>
    <string name="title_about">About</string>
    <string name="msg_load_movie_error">An error was occurred</string>
    <string name="title_load_again">Load again</string>
    <string name="title_status">Status:</string>
    <string name="title_vote_average">Vote average:</string>
    <string name="title_vote_count">Vote count:</string>
    <string name="title_countries">Countries:</string>
    <string name="title_release_date">Release date:</string>
    <string name="title_budget">Budget:</string>
    <string name="title_popularity">Popularity:</string>
    <string name="title_overview">Overview</string>
    <string name="title_character">Character</string>
    <string name="title_review">Review</string>
    <string name="msg_load_video_error">Load video error. Please try again later !</string>
    <string name="title_favorite">Favorite</string>
    <string name="top_stories_title">Top Stories</string>
    <string name="connect_failed_title"> Connect failed</string>
    <string name="reload_title"> Please check your network and \n retry swipe to reload!</string>
    <string name="online_title"> You are online!</string>
    <string name="offline_title"> You are offline!</string>
    <string name="action_view_offline"> View offline</string>
</resources>
