<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/title_news">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_top_stories"
                    android:icon="@drawable/ic_top_stories"
                    android:title="@string/title_top_stories" />

                <item
                    android:id="@+id/action_most_popular"
                    android:icon="@drawable/ic_most_popular"
                    android:title="@string/title_most_popular" />
            </group>
        </menu>
    </item>

    <item android:title="@string/title_movie">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_now_playing"
                    android:icon="@drawable/ic_now_playing_movie"
                    android:title="@string/title_now_playing" />

                <item
                    android:id="@+id/action_top_rate"
                    android:icon="@drawable/ic_top_rate_movie"
                    android:title="@string/title_top_rate" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about"
            android:title="@string/title_about" />

        <item
            android:id="@+id/action_other"
            android:icon="@drawable/ic_other"
            android:title="@string/title_other" />
    </group>
</menu>
